syntax = "proto3";
option go_package = ".;protos";

message DetectedOutput{

  // checkers....
  bool frameworkUsed = 1;
  bool envUsed = 2;
  bool startUpCommands = 3;
  bool dbUsed = 4;
  bool ORMUsed = 5;

  //runtime version used
  string runtimeVersion = 6;

  // list of envs
  repeated string envs = 7;

  // list of start-up commands
  repeated string commands = 8;

  // list of libraries used
  repeated string libraries = 9;

  // list of port used
  repeated Port ports = 10;

  // list of port databases
  repeated DBPort databases = 11;

  // list of DB ORMs
  repeated string ORMs = 12;

  // probability of framework used
  //  float probability = 14;

}
// exposed port
message Port{
  string name = 1;
  string port = 2;
}

// exposed DB port
message DBPort{
  string name = 1;
  string port = 2;
  string version = 3;
}
//    protoc --go_out=. *.proto